--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-      <title>Virtual Pet-1</title>
+      <title>Virtual <Pet-2></title>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
       <script src="p5.play.js"></script>
-      <script src="js/food.js"></script>
+      <script src="Js/Food.js"></script>
 
       
-      <!--Your web app's Firebase configuration
-         Add here-->
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-database.js"></script>
+      <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -22,18 +20,18 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyAFPc9bzMkRUQmHl8Ew1Gy9dQMYPmYzCSc",
-    authDomain: "virtual-pet-d6155.firebaseapp.com",
-    databaseURL: "https://virtual-pet-d6155-default-rtdb.firebaseio.com",
-    projectId: "virtual-pet-d6155",
-    storageBucket: "virtual-pet-d6155.appspot.com",
-    messagingSenderId: "771374468115",
-    appId: "1:771374468115:web:67b270f249118e331fc3e6"
+    apiKey: "AIzaSyCZo8ffe3J4_5QEHTQDUm5VCQ3ErouRpmQ",
+    authDomain: "virtual-pet-2-fffc2.firebaseapp.com",
+    databaseURL: "https://virtual-pet-2-fffc2.firebaseio.com",
+    projectId: "virtual-pet-2-fffc2",
+    storageBucket: "virtual-pet-2-fffc2.appspot.com",
+    messagingSenderId: "631923975675",
+    appId: "1:631923975675:web:a4dd296c0a9dc6f0ed975e"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-
+      
       <link rel="stylesheet" type="text/css" href="style.css"/>
     </head>
     <body>
